[gd_scene load_steps=12 format=3 uid="uid://5mwosxxpvjjf"]

[ext_resource type="Script" path="res://scripts/level_10.gd" id="1_8waqy"]
[ext_resource type="PackedScene" uid="uid://ctmp7o4ijahp2" path="res://scenes/prefab/player.tscn" id="2_bybqs"]
[ext_resource type="PackedScene" uid="uid://b2gyb7rup24up" path="res://scenes/prefab/gate_parrent.tscn" id="2_yihv5"]
[ext_resource type="PackedScene" uid="uid://bb80ejp6p3y0w" path="res://scenes/prefab/side_wall.tscn" id="3_jltof"]
[ext_resource type="PackedScene" uid="uid://ds5xwtjbwixmf" path="res://scenes/prefab/fallout_zone.tscn" id="4_80ruj"]
[ext_resource type="PackedScene" uid="uid://wi1yeq0iuogq" path="res://scenes/prefab/platform_parent.tscn" id="5_ffj5l"]
[ext_resource type="PackedScene" uid="uid://q5v5cu784eqv" path="res://scenes/prefab/escape_button.tscn" id="6_e1bgl"]
[ext_resource type="PackedScene" uid="uid://33uwh1dq2no8" path="res://scenes/prefab/settings_button.tscn" id="7_1va26"]
[ext_resource type="PackedScene" uid="uid://c5temua38dqbd" path="res://scenes/prefab/detect_area.tscn" id="8_sg5fw"]
[ext_resource type="PackedScene" uid="uid://bo47qdnkp8vql" path="res://scenes/prefab/spikes_parent.tscn" id="9_vkgmb"]
[ext_resource type="PackedScene" uid="uid://dgmrjdh6gjqor" path="res://scenes/prefab/sawblade_parent.tscn" id="10_8r0du"]

[node name="Level_10" type="Node2D"]
script = ExtResource("1_8waqy")

[node name="Gate-Parrent" parent="." instance=ExtResource("2_yihv5")]
position = Vector2(162, 516)

[node name="Gate-Parrent2" parent="." instance=ExtResource("2_yihv5")]
position = Vector2(-24, 516)

[node name="Player" parent="." instance=ExtResource("2_bybqs")]
position = Vector2(62, 516)

[node name="SideWall" parent="." instance=ExtResource("3_jltof")]
position = Vector2(-17, 338)

[node name="SideWall2" parent="." instance=ExtResource("3_jltof")]
position = Vector2(1169, 338)

[node name="FalloutZone" parent="." instance=ExtResource("4_80ruj")]
position = Vector2(578, 684)

[node name="EscapeButton" parent="." instance=ExtResource("6_e1bgl")]

[node name="SettingsButton" parent="." instance=ExtResource("7_1va26")]
offset_left = 1080.0
offset_top = 10.0
offset_right = 1205.0
offset_bottom = 135.0

[node name="DetectArea" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(119, 450)
scale = Vector2(0.2, 1)

[node name="DetectArea2" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(275, 450)
scale = Vector2(0.2, 1)

[node name="DetectArea3" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(612, 450)
scale = Vector2(0.2, 1)

[node name="DetectArea4" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(719, 450)

[node name="DetectArea5" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(1002, 450)

[node name="DetectArea6" parent="." instance=ExtResource("8_sg5fw")]
position = Vector2(613, 450)

[node name="Spikes-Parent" parent="." instance=ExtResource("9_vkgmb")]
position = Vector2(162, 523)

[node name="Spikes-Parent2" parent="." instance=ExtResource("9_vkgmb")]
position = Vector2(773, 523)

[node name="Spikes-Parent3" parent="." instance=ExtResource("9_vkgmb")]
position = Vector2(543, 523)

[node name="Sawblade-Parent" parent="." instance=ExtResource("10_8r0du")]
position = Vector2(1180, 480)

[node name="Platform-Parent" parent="." instance=ExtResource("5_ffj5l")]
position = Vector2(315, 561)
scale = Vector2(10.5, 1)

[node name="Platform-Parent2" parent="." instance=ExtResource("5_ffj5l")]
position = Vector2(666, 561)
scale = Vector2(1.2, 1)

[node name="Platform-Parent3" parent="." instance=ExtResource("5_ffj5l")]
position = Vector2(927, 561)
scale = Vector2(7.5, 1)

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_entered" from="DetectArea2" to="." method="_on_detect_area_2_body_entered"]
[connection signal="body_entered" from="DetectArea3" to="." method="_on_detect_area_3_body_entered"]
[connection signal="body_entered" from="DetectArea4" to="." method="_on_detect_area_4_body_entered"]
[connection signal="body_entered" from="DetectArea5" to="." method="_on_detect_area_5_body_entered"]
[connection signal="body_entered" from="DetectArea6" to="." method="_on_detect_area_6_body_entered"]
